--- a/projects/‏‏LandingPageProject7/project 7/style/index.css
+++ b/projects/‏‏LandingPageProject7/project 7/style/index.css
@@ -9,6 +9,15 @@ body {
   text-align: right;
 }
 
+.HeaderColor {
+  position: absolute;
+  width: 300px;
+  height: 10px;
+  right: 0;
+  top: 0;
+  background: #fdbd03;
+}
+
 .BoxWhatsapp {
   border-radius: 55%;
   width: 50px;
@@ -131,10 +140,28 @@ body {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  margin-top: 20px;
   position: absolute;
   bottom: 0;
   width: 100%;
   padding-left: 20px;
   gap: 30px;
+}
+
+.FooterIconsContactMe img {
+  height: 60px;
+  width: 60px;
+  margin-bottom: 35px;
+  background-color: #ffaa00;
+  border-radius: 50%;
+  padding: 10px;
+}
+
+.FooterColor {
+  position: absolute;
+  width: 600px;
+  height: 10px;
+  left: 0;
+  bottom: 0;
+  left: 0;
+  background: #fdbd03;
 }
