--- a/projects/LandingPageProject4/project 4/style/index.css
+++ b/projects/LandingPageProject4/project 4/style/index.css
@@ -39,10 +39,20 @@ h4 {
 }
 
 .form {
+  display: flex;
+  flex-direction: row;
   align-items: center;
+  justify-content: space-between;
   margin: 10px;
   padding: 10px;
   margin-top: 20%;
+}
+
+.form .input-group {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 10px;
 }
 
 .form input {
@@ -56,9 +66,8 @@ h4 {
 }
 
 .form label {
-  justify-content: right;
-  text-align: right;
-  padding: 5px;
+  margin-bottom: 5px;
+  text-align: left;
   display: block;
 }
 
@@ -71,6 +80,7 @@ h4 {
   cursor: pointer;
   margin-top: 10px;
   font-weight: bold;
+  align-self: center;
 }
 
 /* Responsive */
@@ -98,8 +108,13 @@ h4 {
   }
 
   .form {
+    flex-direction: column;
     padding-top: 70vw;
     bottom: 0px;
+  }
+
+  .form .input-group {
+    width: 90%;
   }
 
   .form label {
@@ -109,6 +124,7 @@ h4 {
   }
 
   .form button {
+    margin-top: 20px;
     width: 70%;
     cursor: pointer;
   }
