--- a/projects/LandingPageProject6/index.css
+++ b/projects/LandingPageProject6/index.css
@@ -44,7 +44,7 @@ body {
 
 .NavBar {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: stretch;
   align-items: center;
   background-color: #fff;
   box-shadow: 0 0 10px black;
@@ -54,12 +54,13 @@ body {
   color: darkcyan;
 }
 
-.NavBarFixed ul li a {
+.NavBarFixed a h3 {
   color: darkcyan;
 }
 
-.NavBarFixed ul li a:hover {
+.NavBarFixed a h3:hover {
   text-decoration: underline;
+  cursor: pointer;
 }
 
 .Home {
@@ -67,7 +68,85 @@ body {
   font-size: 1.5rem;
   padding: 10px;
   background-color: darkcyan;
-  height: 200px;
+  height: 230px;
+  box-shadow: 0 0 4px;
+}
+
+.ProjectButtons .button {
+  display: inline-block;
+  padding: 7px 7px;
+  margin: 5px;
+  background-color: darkcyan;
+  color: white;
+  text-align: center;
+  border-radius: 50%;
+  transition: background-color 0.3s ease;
+  border: 2px solid black;
+  box-shadow: 0 0 5px black;
+}
+
+.ProjectButtons .button:hover {
+  background-color: darkslategray;
+}
+
+.ProjectButtons {
+  margin-top: 20px;
+}
+
+.TechnologyPicture {
+  display: flex;
+  justify-content: space-evenly;
+  text-align: center;
+  box-shadow: 0 0 4px;
+}
+
+.TechnologyPicture img {
+  width: 80px;
+  height: 80px;
+  border-radius: 10px;
+  margin: 5px;
+  padding: 10px;
+}
+
+.ProjectBox {
+  background-color: darkcyan;
+  width: 0 auto;
+  height: 0 auto;
+  border: 1px solid black;
+  box-shadow: 0 px 4px -2px rgba(0, 0, 0, 0.685);
+}
+
+.ProjectBoxImage {
+  width: 0 auto;
+  height: 400px;
+  border-radius: 10px;
+  margin: 5px;
+  padding: 10px;
+  box-shadow: 0 0 20px black;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+.SocialMediaBar {
+  display: flex;
+  height: 40px;
+  width: 0 auto;
+  background-color: darkcyan;
+  color: white;
+  justify-content: space-around;
+  align-items: center;
+}
+.SocialMediaBar svg {
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+}
+
+.Footer {
+  background-color: black;
+  color: darkcyan;
+  font-size: 10pt;
+  bottom: 0;
 }
 
 /* Responsive  */
@@ -105,11 +184,13 @@ body {
 
   .ProjectBox {
     position: relative;
-    height: 60vh;
+    height: auto;
+    width: 100%;
   }
 
   .ProjectBoxImage {
-    height: 200px;
+    height: auto;
+    width: 90%;
   }
 
   .SocialMediaBar {
