--- a/style/index.css
+++ b/style/index.css
@@ -318,6 +318,8 @@ input[type="checkbox"] {
   background-color: black;
   color: darkcyan;
   font-size: 10pt;
+  text-align: center;
+  padding: 10px 0;
 }
 /* ----------------Responsive---------------- */
 
@@ -412,14 +414,13 @@ input[type="checkbox"] {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(2, auto);
     gap: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 250px;
   }
 
   .ContactMe form {
     display: block;
     position: relative;
-    bottom: 0;
-    top: 420vw; /* fix */
+    bottom: 50px; /* fix */
     margin-top: 20px;
     margin-bottom: 10px;
     margin: 0 auto;
@@ -445,7 +446,8 @@ input[type="checkbox"] {
     padding: 5px;
   }
   .SocialMediaBar {
-    display: block;
+    margin-top: 35vh;
+    display: flex;
     bottom: 0;
     top: 1200vw;
     bottom: 0;
@@ -453,6 +455,7 @@ input[type="checkbox"] {
     bottom: 0;
     width: 100%;
     text-align: center;
+    justify-content: space-evenly;
   }
 
   .SocialMediaBar svg {
@@ -461,12 +464,15 @@ input[type="checkbox"] {
   }
 
   .Footer {
-    display: block;
-    top: 1210vw;
-    bottom: 0;
+    width: 100%;
+    height: 30px;
+    margin-top: 34vh;
+  }
+
+  .Footer p {
+    /* position: absolute; */
+    text-align: center;
+    justify-content: center;
     font-size: 3vw;
-    bottom: 0vw;
-    background-color: black;
-    position: absolute;
   }
 }
