--- a/projects/LandingPageProject3/project 3/style/index.css
+++ b/projects/LandingPageProject3/project 3/style/index.css
@@ -12,6 +12,16 @@
   direction: rtl;
 }
 
+body {
+  top: 0;
+  left: 0;
+  right: 0;
+  min-height: 100vh;
+  background: transparent linear-gradient(180deg, #281eff 0%, #2dff8c 100%) 0%
+    0% no-repeat padding-box;
+  opacity: 1;
+}
+
 .Box {
   top: 50%;
   left: 50%;
@@ -22,9 +32,8 @@
   margin-top: 50%;
 }
 .HereNowText {
-  display: flex;
   font-family: "satisfy" sans-serif;
-  top: 670px;
+  top: 600px;
   left: 582px;
   width: 755px;
   height: 204px;
@@ -33,17 +42,6 @@
   letter-spacing: 0px;
   color: #ffffff;
   text-shadow: 1px 0px 80px #00000087;
-  opacity: 1;
-}
-
-body {
-  top: 0;
-  left: 0;
-  right: 0;
-  width: 100vw;
-  min-height: 100vh;
-  background: transparent linear-gradient(180deg, #281eff 0%, #2dff8c 100%) 0%
-    0% no-repeat padding-box;
   opacity: 1;
 }
 
@@ -80,6 +78,12 @@ form {
   font-family: "Varela" sans-serif;
 }
 
+form input[type="text"],
+form input[type="email"] {
+  background: none;
+  border: 2px solid white;
+}
+
 .UpdateButton {
   text-align: center;
   font: normal normal normal 16px/20px Varela Round;
@@ -112,7 +116,6 @@ form {
     width: 100%;
     height: auto;
     top: 50px;
-    left: 0;
   }
 
   .GiftText {
