--- a/style/index.css
+++ b/style/index.css
@@ -180,6 +180,7 @@ input[type="checkbox"] {
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, auto);
   gap: 50px;
+  margin-bottom: 30px;
 }
 
 .ProjectContainer {
