--- a/style/index.css
+++ b/style/index.css
@@ -212,6 +212,12 @@ input[type="checkbox"] {
   padding: 10px;
   box-shadow: 0 0 5px black;
   background-color: darkcyan;
+  filter: grayscale(10%);
+}
+
+.ProjectContainer img:hover {
+  filter: grayscale(0%);
+  filter: drop-shadow(0 0 5px darkcyan);
 }
 
 .ProjectButton {
