--- a/style/index.css
+++ b/style/index.css
@@ -190,6 +190,11 @@ input[type="checkbox"] {
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, auto);
   gap: 50px;
+  /*   background-image: url("");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-blend-mode: darken; */
 }
 
 .ProjectContainer {
@@ -255,6 +260,7 @@ input[type="checkbox"] {
   background-image: url("/Images/FormBackground.png");
   background-size: cover;
   background-position: bottom;
+  opacity: 0.7;
 }
 .ContactMe h2 {
   padding-bottom: 20px;
